# python_project_example

./: .dockerignore  .gitignore  CLASS_EXERCISE.md  Dockerfile  LICENSE  README.md  pyproject.toml
examples/: 01_import_examples.py  02_use_installed_package.py  03_logging_levels.py  04_relative_vs_absolute_imports.py  import_examples.py  single_module_example.py
examples/package_with_init/: __init__.py  greetings.py
examples/package_without_init/: info.py
scripts/: compare_install_locations.py  demo_docker_install.sh  demo_virtualenv_install.sh  install_local.sh  install_picker_and_show_paths.py  run_tests.sh
src/dir_monitor_exellenteam/: __init__.py  __main__.py  cli.py  formatting.py  import_examples.py  monitor.py
tests/: conftest.py
tests/integration/: test_monitor_integration.py
tests/system/: test_cli_system.py  test_install_location_comparison_system.py  test_install_picker_system.py
tests/unit/: test_cli.py  test_formatting_and_imports.py  test_monitor.py
